--- a/more info.html
+++ b/more info.html
@@ -18,5 +18,5 @@
 </html>
 
 <a href="file:///C:/Users/Fshatti/Documents/GitHub/web-hw-1/my%20life.html">
-
+<button>  اضغط هنا للموقع العربي</button>
 <p>اضغط هنا للموقع العربي</p> </a>
